ajuste em imagens

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <nav class="menu" role="navigation" aria-label="Menu principal">
           <ul>
             <li><a href="#">Início</a></li>
-            <li><a href="./cadastro.html">Cadastro</a></li>
+            <li><a href="./html/cadastro.html">Cadastro</a></li>
             <li><a href="#">Contato</a></li>
           </ul>
           <button class="menu-close" aria-label="Fechar menu">&times;</button>
         </nav>
 
-        <a href="./login.html" class="login-icon" aria-label="Login">
+        <a href="./html//login.html" class="login-icon" aria-label="Login">
           <img src="img/login.png" alt="Login" />
         </a>
 
