ajuste no termo de uso e outros

--- a/html/politica.html
+++ b/html/politica.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Política de Privacidade – Meu Evento</title>
+  <title>Política de Privacidade – Starweb</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -20,51 +20,58 @@
 <body>
 
   <h1>Política de Privacidade</h1>
-  <p>Esta Política de Privacidade descreve como coletamos, usamos e protegemos as informações dos usuários do aplicativo <strong>Meu Evento</strong>, disponível para dispositivos móveis Android.</p>
+  <p>Esta Política de Privacidade descreve como a <strong>Starweb</strong> coleta, utiliza e protege as informações dos usuários que acessam nossos serviços e ferramentas baseadas em inteligência artificial, incluindo chatbots e soluções de interação.</p>
 
   <h2>1. Informações Coletadas</h2>
-  <p>Ao utilizar o aplicativo, coletamos as seguintes informações pessoais:</p>
+  <p>Ao utilizar nossos serviços, podemos coletar as seguintes informações:</p>
   <ul>
     <li>Nome completo</li>
     <li>Endereço de e-mail</li>
-    <li>Telefone</li>
-    <li>Data de nascimento</li>
+    <li>Telefone (quando necessário para suporte)</li>
+    <li>Dados fornecidos durante interações com nossos chatbots ou ferramentas</li>
+    <li>Informações técnicas, como endereço IP, tipo de dispositivo e navegador</li>
   </ul>
-  <p>Esses dados são fornecidos voluntariamente pelo usuário no momento do cadastro e são essenciais para a gestão de eventos e participantes.</p>
+  <p>Esses dados podem ser fornecidos diretamente pelo usuário ou coletados automaticamente para melhorar a experiência e a segurança da plataforma.</p>
 
   <h2>2. Uso das Informações</h2>
-  <p>As informações coletadas são utilizadas para os seguintes fins:</p>
+  <p>As informações coletadas são utilizadas para:</p>
   <ul>
-    <li>Cadastro e gerenciamento de eventos</li>
-    <li>Controle e identificação de participantes</li>
-    <li>Envio de comunicações relacionadas ao evento</li>
-    <li>Relatórios e organização do evento</li>
-    <li>Processamento de pagamentos via Pix (dados bancários não são armazenados)</li>
+    <li>Fornecer, operar e melhorar nossos serviços de inteligência artificial</li>
+    <li>Personalizar a experiência do usuário</li>
+    <li>Oferecer suporte e atendimento ao cliente</li>
+    <li>Analisar desempenho e métricas para aprimoramento das ferramentas</li>
+    <li>Cumprir obrigações legais e regulatórias</li>
   </ul>
 
-  <h2>3. Armazenamento de Dados</h2>
-  <p>Todos os dados são armazenados de forma segura utilizando os serviços da <strong>AWS (Amazon Web Services)</strong>. Tomamos medidas técnicas e administrativas para proteger suas informações contra acesso não autorizado, alteração ou destruição.</p>
+  <h2>3. Armazenamento e Segurança de Dados</h2>
+  <p>Todos os dados são armazenados de forma segura utilizando servidores com padrões reconhecidos de segurança. Adotamos medidas técnicas e administrativas para proteger suas informações contra acesso não autorizado, alteração ou destruição.</p>
 
   <h2>4. Compartilhamento de Dados</h2>
-  <p>Não compartilhamos suas informações pessoais com terceiros, exceto quando exigido por lei ou com seu consentimento expresso.</p>
+  <p>Não compartilhamos suas informações pessoais com terceiros, exceto:</p>
+  <ul>
+    <li>Quando necessário para cumprimento de obrigações legais</li>
+    <li>Com provedores de serviços essenciais para operação da plataforma, sob cláusulas de confidencialidade</li>
+    <li>Com seu consentimento explícito</li>
+  </ul>
 
-  <h2>5. Pagamentos</h2>
-  <p>Os pagamentos no aplicativo são realizados exclusivamente via <strong>Pix</strong>. O app não armazena dados bancários ou informações sensíveis de pagamento.</p>
+  <h2>5. Direitos do Usuário</h2>
+  <p>De acordo com a LGPD, você tem direito de:</p>
+  <ul>
+    <li>Acessar seus dados pessoais</li>
+    <li>Corrigir dados incorretos ou desatualizados</li>
+    <li>Solicitar exclusão de dados</li>
+    <li>Revogar consentimento a qualquer momento</li>
+  </ul>
+  <p>Para exercer seus direitos, entre em contato pelo e-mail informado abaixo.</p>
 
-  <h2>6. Direitos do Usuário</h2>
-  <p>Você tem o direito de acessar, corrigir ou solicitar a exclusão dos seus dados pessoais a qualquer momento. Para isso, entre em contato conosco pelo e-mail abaixo.</p>
+  <h2>6. Alterações nesta Política</h2>
+  <p>Podemos atualizar esta Política de Privacidade periodicamente. A versão mais recente estará sempre disponível nesta página.</p>
 
-  <h2>Informações sobre idade e bebidas alcoólicas</h2>
-  <p>Coletamos a data de nascimento do usuário para verificar a idade mínima legal exigida para compra de bebidas alcoólicas. Essas informações são usadas exclusivamente para esse controle e seguem todas as normas da Lei Geral de Proteção de Dados (LGPD).</p>
-
-  <h2>7. Alterações nesta Política</h2>
-  <p>Podemos atualizar esta Política de Privacidade periodicamente. Recomendamos que o usuário consulte esta página regularmente para estar ciente de eventuais mudanças.</p>
-
-  <h2>8. Contato</h2>
+  <h2>7. Contato</h2>
   <p>Se tiver dúvidas ou quiser exercer seus direitos relacionados à privacidade dos seus dados, entre em contato conosco:</p>
-  <p><strong>E-mail de suporte:</strong> suporte@meuevento.app</p>
+  <p><strong>E-mail de suporte:</strong> starwebsistem@gmail.com</p>
 
-  <p>Última atualização: 08 de junho de 2025</p>
+  <p>Última atualização: 25 de agosto de 2025</p>
 
 </body>
 </html>
