--- a/html/principal.html
+++ b/html/principal.html
@@ -8,7 +8,7 @@
 <body>
 
 <main>
-  <h1>Bem-vindo à Página Principal da Barbearia</h1>
+  <h1>Bem-vindo Star Web Sistem</h1>
   <p id="welcome-message">Carregando...</p>
 
   <div class="icon-links">
