--- a/html/termouso.html
+++ b/html/termouso.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Termo de Uso – Meu Evento</title>
+  <title>Termos de Uso – Starweb</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -19,42 +19,51 @@
 </head>
 <body>
 
-  <h1>Termo de Uso</h1>
-  <p>Bem-vindo ao <strong>Meu Evento</strong>! Ao usar nosso aplicativo, você concorda com os termos abaixo.</p>
+  <h1>Termos de Uso</h1>
+  <p>Bem-vindo à <strong>Starweb</strong>! Ao utilizar nossos serviços e ferramentas de inteligência artificial, você concorda com os termos abaixo.</p>
 
   <h2>1. Aceitação dos Termos</h2>
-  <p>Ao utilizar o app, você concorda integralmente com este Termo de Uso.</p>
+  <p>Ao acessar ou utilizar qualquer serviço da Starweb, você concorda integralmente com estes Termos de Uso. Caso não concorde, não utilize nossos serviços.</p>
 
-  <h2>2. Objetivo do Aplicativo</h2>
-  <p>O Meu Evento é um app para organização de eventos, com funções de cadastro, controle de participantes, vendas antecipadas de bebidas/comidas e pagamento via Pix.</p>
+  <h2>2. Objetivo dos Serviços</h2>
+  <p>A Starweb oferece soluções baseadas em inteligência artificial, incluindo chatbots e ferramentas de interação, com o objetivo de melhorar a comunicação e automação para empresas e usuários finais.</p>
 
   <h2>3. Cadastro do Usuário</h2>
-  <p>Você deve fornecer dados verdadeiros e é responsável por manter sua conta segura.</p>
+  <p>Para utilizar determinadas funcionalidades, poderá ser necessário realizar um cadastro. O usuário deve fornecer informações verdadeiras, completas e atualizadas, sendo responsável por manter a confidencialidade de seus dados de acesso.</p>
 
   <h2>4. Privacidade</h2>
-  <p>Seus dados são protegidos conforme nossa <a href="politica.html">Política de Privacidade</a>.</p>
+  <p>Suas informações pessoais são tratadas conforme nossa <a href="politica.html">Política de Privacidade</a>, em conformidade com a Lei Geral de Proteção de Dados (LGPD).</p>
 
-  <h2>Venda de Bebidas Alcoólicas</h2>
-  <p>O aplicativo Meu Evento permite a visualização e compra antecipada de bebidas alcoólicas. Essa funcionalidade é restrita a usuários com 18 anos ou mais. Ao utilizar o app, o usuário declara, sob sua responsabilidade, que é maior de idade.</p>
-  <p>A organização do evento poderá exigir documento oficial com foto no momento da retirada da bebida, a fim de comprovar a idade. O uso indevido desta funcionalidade, incluindo o fornecimento de dados falsos, poderá resultar na suspensão ou exclusão da conta.</p>
+  <h2>5. Uso dos Serviços</h2>
+  <p>Você se compromete a utilizar nossos serviços de forma lícita e ética, não devendo:</p>
+  <ul>
+    <li>Inserir conteúdo ilegal, ofensivo, discriminatório ou que viole direitos de terceiros;</li>
+    <li>Tentar acessar áreas restritas ou sistemas sem autorização;</li>
+    <li>Utilizar os serviços para atividades fraudulentas ou prejudiciais.</li>
+  </ul>
 
-  <h2>5. Pagamentos</h2>
-  <p>Todos os pagamentos são realizados via Pix. Verifique os dados antes de enviar.</p>
+  <h2>6. Propriedade Intelectual</h2>
+  <p>Todo o conteúdo, código, design e funcionalidades disponibilizadas pela Starweb são protegidos por direitos autorais e não podem ser copiados, distribuídos ou utilizados sem autorização expressa.</p>
 
-  <h2>6. Uso Indevido</h2>
-  <p>Qualquer uso indevido pode levar ao bloqueio da conta.</p>
+  <h2>7. Limitação de Responsabilidade</h2>
+  <p>A Starweb se esforça para garantir a qualidade e disponibilidade de seus serviços, porém não se responsabiliza por:</p>
+  <ul>
+    <li>Erros ocasionais, falhas técnicas ou indisponibilidade temporária;</li>
+    <li>Uso indevido das ferramentas por terceiros;</li>
+    <li>Danos indiretos ou consequenciais resultantes do uso ou da impossibilidade de uso dos serviços.</li>
+  </ul>
 
-  <h2>7. Alterações</h2>
-  <p>O app pode ser alterado ou descontinuado a qualquer momento.</p>
-
-  <h2>8. Garantias</h2>
-  <p>Não garantimos funcionamento contínuo ou sem erros, embora nos esforcemos para oferecer o melhor serviço.</p>
+  <h2>8. Alterações nos Serviços</h2>
+  <p>A Starweb poderá alterar, suspender ou descontinuar seus serviços a qualquer momento, mediante aviso prévio sempre que possível.</p>
 
   <h2>9. Mudanças neste Termo</h2>
-  <p>Este termo pode ser atualizado sem aviso prévio. Verifique periodicamente.</p>
+  <p>Este Termo de Uso poderá ser atualizado periodicamente. Recomendamos que o usuário consulte esta página regularmente para verificar alterações.</p>
 
   <h2>10. Contato</h2>
-  <p>Dúvidas? Escreva para <strong>suportemeuevento@meuevento.com</strong></p>
+  <p>Em caso de dúvidas ou solicitações relacionadas a este Termo de Uso, entre em contato conosco:</p>
+  <p><strong>E-mail de suporte:</strong> starwebsistem@gmail.com</p>
+
+  <p>Última atualização: 25 de agosto de 2025</p>
 
 </body>
 </html>
