--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -22,7 +22,7 @@
       <label for="confirmar-senha">Confirmar Senha</label>
       <input type="password" id="confirmar-senha" name="confirmar-senha" placeholder="Confirme sua senha" required />
 
-      <label for="barbearia">Nome da Barbearia</label>
+      <label for="barbearia">Telefone</label>
       <input type="text" id="barbearia" name="barbearia" placeholder="Nome da barbearia" required />
 
       <button type="submit">Cadastrar</button>
