ajuste no termo de uso e outros

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="right-group">
         <nav class="menu" role="navigation" aria-label="Menu principal">
           <ul>
-            <li><a href="#">Início</a></li>
+            <li><a href="#">Bem vindo</a></li>
             <li><a href="./html/cadastro.html">Cadastro</a></li>
             <li><a href="#">Contato</a></li>
           </ul>
@@ -36,7 +36,7 @@
   <!-- Banner destaque com troca automática de imagens -->
 	<section class="banner-destaque">
 	  <div class="conteudo-banner">
-	    <h1>Bem Vindo a Star Web .</h1>
+	    <h1>Star Web</h1>
 	    <p>Simplificando o seu dia a dia.</p>
 	  </div>
 	
@@ -66,8 +66,8 @@
        
       </a>
       <a href="sobre.html" class="foto-item">
-        <img src="img/corte.jpg" alt="Sobre o App" />
-        <h3>Planos!</h3>
+        <img src="img/life.jpg" alt="Sobre o App" />
+        <h3>My life story</h3>
       
       </a>
       <a href="sobre.html" class="foto-item">
