--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 	    <h1>Star Web</h1>
 	    <p>Simplificando o seu dia a dia.</p>
 	  </div>
-	
-	  <button class="btn-saiba-mais">Saiba Mais</button>
+	  <a href="html/saibamais.html">
+        <button class="btn-saiba-mais">Saiba Mais</button>
+      </a>
 	</section>
 
   <!-- Área principal com 3 imagens clicáveis -->
