--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Star Web</title>
+  <link rel="icon" href="img/favicon.png" type="image/png">
   <link rel="stylesheet" href="css/style.css?v=3" />
   <link rel="stylesheet" href="css/mobile.css?v=3" media="(max-width: 768px)" />
 </head>
