--- a/html/login.html
+++ b/html/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Login - Star web</title>
+  <title>Login - Star Web</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -79,7 +79,7 @@
     }
 
     try {
-      const response = await fetch('https://barberplus.giize.com/login', {
+      const response = await fetch('https://starweb.giize.com/api/login', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ email, senha })
@@ -90,7 +90,7 @@
       if (!response.ok) {
         throw new Error(data?.erro || 'Erro no login');
       }
-      
+
       const token = data.token;
       localStorage.setItem('token', token);
 
@@ -98,16 +98,11 @@
       const payloadBase64 = token.split('.')[1];
       const payloadJson = atob(payloadBase64);
       const payload = JSON.parse(payloadJson);
-      const userId = payload.id || payload.userId || payload.sub;
+      const userId = payload.id || payload.sub;
       localStorage.setItem('usuarioId', userId);
-      
-      if (payload.barbearia_id) {
-    	  localStorage.setItem('barbeariaId', payload.barbearia_id); // ✅ Salva o ID da barbearia
-    	}
 
-      // Redireciona conforme tipo de usuário retornado do backend
+      // Redireciona conforme tipo de usuário
       const tipo = data.tipo;
-
       if (tipo === 'usuario') {
         window.location.href = './principal.html';
       } else if (tipo === 'cliente') {
