--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<section class="banner-destaque">
 	  <div class="conteudo-banner">
 	    <h1>Star Web</h1>
-	    <p>Simplificando o seu dia a dia.</p>
+	    <p>Simplificando o seu dia a dia, tenha tempo para viver.</p>
 	  </div>
 	  <a href="html/saibamais.html">
         <button class="btn-saiba-mais">Saiba Mais</button>
