ajuste no loguin

--- a/html/login.html
+++ b/html/login.html
@@ -104,9 +104,9 @@
       // Redireciona conforme tipo de usuário
       const tipo = data.tipo;
       if (tipo === 'usuario') {
-        window.location.href = './html/principal.html';
+        window.location.href = '/html/principal.html';
       } else if (tipo === 'cliente') {
-        window.location.href = './html//principalcliente.html';
+        window.location.href = '/html//principalcliente.html';
       } else {
         errorMsg.textContent = 'Tipo de usuário desconhecido.';
       }
