ajuste no loguin

--- a/html/login.html
+++ b/html/login.html
@@ -106,7 +106,7 @@
       if (tipo === 'usuario') {
         window.location.href = '/html/principal.html';
       } else if (tipo === 'cliente') {
-        window.location.href = '/html//principalcliente.html';
+        window.location.href = '/html/principalcliente.html';
       } else {
         errorMsg.textContent = 'Tipo de usuário desconhecido.';
       }
