ajuste no cadastro

--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -4,20 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cadastro</title>
-  <link rel="stylesheet" href="/css/cadastro.css" />
+  <!-- Caminho corrigido para o CSS -->
+  <link rel="stylesheet" href="../css/cadastro.css" />
 </head>
 <body>
   <div class="form-container">
-    <h2>Cadastro de Cliente</h2>
-    <form id="cadastroForm">
+    <h2>Cadastro de Usuário</h2>
+    <form method="POST" class="form-cadastro" id="cadastroForm">
       <label for="nome">Nome Completo</label>
       <input type="text" id="nome" name="nome" placeholder="Seu nome completo" required />
 
       <label for="email">E-mail</label>
       <input type="email" id="email" name="email" placeholder="email@exemplo.com" required />
-
-      <label for="telefone">Telefone</label>
-      <input type="tel" id="telefone" name="telefone" placeholder="+55XXXXXXXXXXX" required />
 
       <label for="senha">Senha</label>
       <input type="password" id="senha" name="senha" placeholder="Digite sua senha" required />
@@ -25,56 +23,61 @@
       <label for="confirmar-senha">Confirmar Senha</label>
       <input type="password" id="confirmar-senha" name="confirmar-senha" placeholder="Confirme sua senha" required />
 
+      <label for="telefone">Telefone</label>
+      <input type="text" id="telefone" name="telefone" placeholder="Ex.: +556282300387" required />
+
       <button type="submit">Cadastrar</button>
-      <p id="mensagem" style="margin-top:10px; color:red;"></p>
     </form>
   </div>
 
-<script>
-  const form = document.getElementById('cadastroForm');
-  const msg = document.getElementById('mensagem');
+  <!-- Script para envio -->
+  <script>
+    document.getElementById('cadastroForm').addEventListener('submit', async function (e) {
+      e.preventDefault();
 
-  form.addEventListener('submit', async (e) => {
-    e.preventDefault();
-    msg.style.color = 'red';
-    msg.textContent = '';
+      const nome = document.getElementById('nome').value.trim();
+      const email = document.getElementById('email').value.trim();
+      const senha = document.getElementById('senha').value;
+      const confirmarSenha = document.getElementById('confirmar-senha').value;
+      const telefone = document.getElementById('telefone').value.trim();
 
-    const nome = document.getElementById('nome').value.trim();
-    const email = document.getElementById('email').value.trim();
-    const telefone = document.getElementById('telefone').value.trim();
-    const senha = document.getElementById('senha').value;
-    const confirmarSenha = document.getElementById('confirmar-senha').value;
-
-    if (senha !== confirmarSenha) {
-      msg.textContent = 'As senhas não coincidem.';
-      return;
-    }
-
-    const dados = { nome, telefone, email, senha };
-
-    try {
-      const resposta = await fetch('https://starweb.giize.com/api/clientes', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(dados)
-      });
-
-      const resultado = await resposta.json();
-
-      if (!resposta.ok) {
-        msg.textContent = resultado.erro || 'Erro ao cadastrar. Tente novamente.';
+      if (senha !== confirmarSenha) {
+        alert("As senhas não coincidem.");
         return;
       }
 
-      msg.style.color = 'green';
-      msg.textContent = 'Cadastro realizado com sucesso!';
-      form.reset();
+      const dados = {
+        nome: nome,
+        telefone: telefone,
+        email: email,
+        senha: senha
+      };
 
-    } catch (error) {
-      msg.textContent = 'Erro de conexão com o servidor.';
-      console.error('Erro:', error);
-    }
-  });
-</script>
+      try {
+        const resposta = await fetch("https://starweb.giize.com/api/clientes", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify(dados)
+        });
+
+        const resultado = await resposta.json();
+
+        if (!resposta.ok) {
+          alert(`Erro ao cadastrar: ${resultado.mensagem || 'Erro desconhecido.'}`);
+          return;
+        }
+
+        alert("Cadastro realizado com sucesso!");
+        console.log(resultado);
+        document.getElementById('cadastroForm').reset();
+
+      } catch (erro) {
+        console.error("Erro de rede ou servidor:", erro);
+        alert("Erro ao se conectar com o servidor.");
+      }
+    });
+  </script>
 </body>
 </html>
