--- a/html/principal.html
+++ b/html/principal.html
@@ -12,9 +12,9 @@
   <p id="welcome-message">Carregando...</p>
 
   <div class="icon-links">
-    <a href="./cadevento.html" class="icon-link">
+    <a href="./html/cadastro.html" class="icon-link">
       <img src="https://img.icons8.com/ios-filled/100/004080/calendar.png" alt="Evento" />
-      <div>Cadastro Evento</div>
+      <div>Cadastro Cliente</div>
     </a>
 
     <a href="./cadastrarhorarios.html" class="icon-link">
