--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="menu" role="navigation" aria-label="Menu principal">
           <ul>
             <li><a href="#">Bem vindo</a></li>
-            <li><a href="./html/cadastro.html">Cadastro</a></li>
+           <!-- <li><a href="./html/cadastro.html">Cadastro</a></li> -->
             <li><a href="#">Contato</a></li>
           </ul>
           <button class="menu-close" aria-label="Fechar menu">&times;</button>
