ajuste no cadastro

--- a/html/login.html
+++ b/html/login.html
@@ -102,7 +102,7 @@
       localStorage.setItem('usuarioId', userId);
 
       // ✅ Redirecionamento baseado no e-mail informado
-      if (email === 'starweb@gmail.com') {
+      if (email === 'starwebsistem@gmail.com') {
         window.location.href = '/html/principal.html';
       } else {
         window.location.href = '/html/principalcliente.html';
