ajuste no cadastro

--- a/html/principal.html
+++ b/html/principal.html
@@ -12,7 +12,7 @@
   <p id="welcome-message">Carregando...</p>
 
   <div class="icon-links">
-    <a href="./html/cadastro.html" class="icon-link">
+    <a href="./cadastro.html" class="icon-link">
       <img src="https://img.icons8.com/ios-filled/100/004080/calendar.png" alt="Evento" />
       <div>Cadastro Cliente</div>
     </a>
